# sktime-workshop-pycon-colombia-2025

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_generate_data.ipynb  01_introduction.ipynb  01_univariate.ipynb  02_panel.ipynb  03_hierarchical.ipynb
src/pycon_workshop/: dataset.py
